k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blockatlas
  name: blockatlas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockatlas
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: blockatlas
    spec:
      containers:
        - env:
            - name: ATLAS_MARKET_ENABLED
              value: "true"
            - name: ATLAS_OBSERVER_ENABLED
              value: "true"
            - name: ATLAS_STORAGE_REDIS
              value: redis://redis-ha:6379 # I can recommend the Redis Helm Chart https://github.com/helm/charts/tree/master/stable/redis
          image: trustwallet/blockatlas
          name: blockatlas
      dnsPolicy: ClusterFirst
      restartPolicy: Always
