k8s/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: blockatlas
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8420
      protocol: TCP
      targetPort: 8420
  selector:
    app: blockatlas
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blockatlas
spec:
  rules:
    - host: blockatlas.localhost
      http:
        paths:
          - backend:
              serviceName: blockatlas
              servicePort: http
